--- a/style.css
+++ b/style.css
@@ -37,6 +37,73 @@
   --bgColor: #191d2b;
   --Color: rgb(214, 213, 213);
 }
+.center {
+  background: #191d2b;
+  min-height: 100vh;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+.spana {
+  color: #737373;
+  font-size: 20px;
+  text-transform: uppercase;
+  letter-spacing: 1px;
+  line-height: 200px;
+  animation: text 3s ease-in-out infinite;
+}
+@keyframes text {
+  50% {
+    color: #191d2b;
+  }
+}
+.ring {
+  position: absolute;
+  width: 200px;
+  height: 200px;
+  border-radius: 50%;
+  animation: ring 2s linear infinite;
+}
+@keyframes ring {
+  0% {
+    transform: rotate(0deg);
+    box-shadow: 1px 1px 2px #e65c00;
+  }
+  50% {
+    transform: rotate(180deg);
+    box-shadow: 1px 5px 2px #18b201;
+  }
+  100% {
+    transform: rotate(360deg);
+    box-shadow: 1px 5px 2px #0456c8;
+  }
+}
+.ring::before {
+  position: absolute;
+  content: "";
+  left: 0;
+  top: 0;
+  height: 100%;
+  width: 100%;
+  /* box-shadow: 0 0 5px rgba(255, 255, 255, 0.3); */
+}
+/* ---------Social İCON---------- */
+.social {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin-top: 1rem;
+}
+.social a {
+  color: rgb(215, 215, 215);
+  font-size: 2.5rem;
+  padding: 10px;
+}
+.social a:hover {
+  color: #27ae60;
+  transition: all 0.5s;
+  transform: scale(1.2);
+}
 
 /* --- Home Section Start --- */
 #home {
@@ -314,22 +381,27 @@
   display: inline-block;
   text-decoration: none;
   color: var(--Color);
-  border: 2px solid var(--themeColor);
+  border: 1px solid var(--themeColor);
   padding: 7px 25px;
   font-family: var(--pFont);
-  font-size: 16px;
+  font-size: 20px;
   font-weight: 500;
-  letter-spacing: 0.5px;
+  letter-spacing: 3px;
   margin-top: 15px;
-  border-radius: 4px;
+  border-radius: 15px;
   border-top-right-radius: 0;
-  background-color: var(--themeColor);
+  /* background-color: var(--themeColor); */
 }
 #about .about-cols .about-left-col a:hover i {
   transform: translateX(5px);
+  background-color: #191d2b;
+}
+#about .about-cols .about-left-col a:hover {
+  background-color: var(--themeColor);
+  transition: 0.5s;
 }
 #about .about-cols .about-left-col a i {
-  background-color: #48dd85;
+  /* background-color: #48dd85; */
   padding: 6px 10px;
   border-radius: 4px;
   margin-left: 10px;
